--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
-        font-size: 11px;
+        color: hsl(217, 19%, 35%);
+        font-size: 1rem;
         text-align: center;
+        font-weight: 600;
+        transform: translateY(1rem);
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -175,11 +178,11 @@
       </article>
     </main>
 
-    <!-- <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+      >. Coded by <a href="https://github.com/DeyanTopalov">Deyan Topalov</a>.
+    </footer>
   </body>
 </html>
