improved alt tags

--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
   </head>
   <body>
     <main class="testimonial">
-      <article class="testimonial-card quote">
-        <div class="testimonial-card-flex">
+      <figure class="testimonial-card quote">
+        <figcaption class="testimonial-card-flex">
           <img
             src="images/image-daniel.jpg"
-            alt="User headshot"
+            alt="Headshot of Daniel Clifford"
             class="picture"
           />
-          <p class="testimonial-card-name">
-            Daniel Clifford<br />
-            <span class="card-name-span">Verified Graduate</span>
-          </p>
-        </div>
-        <h2 class="testimonial-card-tittle">
+          <div>
+            <h2 class="testimonial-card-name">Daniel Clifford</h2>
+            <p class="card-name-verified">Verified Graduate</p>
+          </div>
+        </figcaption>
+        <p class="testimonial-card-tittle">
           I received a job offer mid-course, and the subjects I learned were
           current, if not more so, in the company I joined. I honestly feel I
           got every penny’s worth.
-        </h2>
+        </p>
         <div class="testimonial-card-paragraph">
           <p>
             “ I was an EMT for many years before I joined the bootcamp. I’ve
@@ -70,22 +70,22 @@
             as a Software Engineer at a VR startup. ”
           </p>
         </div>
-      </article>
-      <article class="testimonial-card">
-        <div class="testimonial-card-flex">
+      </figure>
+      <figure class="testimonial-card">
+        <figcaption class="testimonial-card-flex">
           <img
             src="images/image-jonathan.jpg"
-            alt="User headshot"
+            alt="Headshot of Jonathan Walters"
             class="picture"
           />
-          <p class="testimonial-card-name">
-            Jonathan Walters<br />
-            <span class="card-name-span">Verified Graduate</span>
-          </p>
-        </div>
-        <h2 class="testimonial-card-tittle">
+          <div>
+            <h2 class="testimonial-card-name">Jonathan Walters</h2>
+            <p class="card-name-verified">Verified Graduate</p>
+          </div>
+        </figcaption>
+        <p class="testimonial-card-tittle">
           The team was very supportive and kept me motivated
-        </h2>
+        </p>
         <div class="testimonial-card-paragraph">
           <p>
             “ I started as a total newbie with virtually no coding skills. I now
@@ -93,46 +93,46 @@
             best investments I’ve made in myself. ”
           </p>
         </div>
-      </article>
-      <article class="testimonial-card">
-        <div class="testimonial-card-flex">
+      </figure>
+      <figure class="testimonial-card">
+        <figcaption class="testimonial-card-flex">
           <img
             src="images/image-jeanette.jpg"
-            alt="User headshot"
+            alt="Headshot of Jeanette Harmon"
             class="picture"
           />
-          <p class="testimonial-card-name">
-            Jeanette Harmon<br />
-            <span class="card-name-span">Verified Graduate</span>
-          </p>
-        </div>
-        <h2 class="testimonial-card-tittle">
+          <div>
+            <h2 class="testimonial-card-name">Jeanette Harmon</h2>
+            <p class="card-name-verified">Verified Graduate</p>
+          </div>
+        </figcaption>
+        <p class="testimonial-card-tittle">
           An overall wonderful and rewarding experience
-        </h2>
+        </p>
         <div class="testimonial-card-paragraph">
           <p>
             “ Thank you for the wonderful experience! I now have a job I really
             enjoy, and make a good living while doing something I love. ”
           </p>
         </div>
-      </article>
-      <article class="testimonial-card">
-        <div class="testimonial-card-flex">
+      </figure>
+      <figure class="testimonial-card">
+        <figcaption class="testimonial-card-flex">
           <img
             src="images/image-patrick.jpg"
-            alt="User headshot"
+            alt="Headshot of Patrick Abrams"
             class="picture"
           />
-          <p class="testimonial-card-name">
-            Patrick Abrams<br />
-            <span class="card-name-span">Verified Graduate</span>
-          </p>
-        </div>
-        <h2 class="testimonial-card-tittle">
+          <div>
+            <h2 class="testimonial-card-name">Patrick Abrams</h2>
+            <p class="card-name-verified">Verified Graduate</p>
+          </div>
+        </figcaption>
+        <p class="testimonial-card-tittle">
           Awesome teaching support from TAs who did the bootcamp themselves.
           Getting guidance from them and learning from their experiences was
           easy.
-        </h2>
+        </p>
         <div class="testimonial-card-paragraph">
           <p>
             “ The staff seem genuinely concerned about my progress which I find
@@ -143,22 +143,22 @@
             and amazing people. ”
           </p>
         </div>
-      </article>
-      <article class="testimonial-card">
-        <div class="testimonial-card-flex">
+      </figure>
+      <figure class="testimonial-card">
+        <figcaption class="testimonial-card-flex">
           <img
             src="images/image-kira.jpg"
-            alt="User headshot"
+            alt="Headshot of Kira Whittle"
             class="picture"
           />
-          <p class="testimonial-card-name">
-            Kira Whittle <br />
-            <span class="card-name-span">Verified Graduate</span>
-          </p>
-        </div>
-        <h2 class="testimonial-card-tittle">
+          <div>
+            <h2 class="testimonial-card-name">Kira Whittle</h2>
+            <p class="card-name-verified">Verified Graduate</p>
+          </div>
+        </figcaption>
+        <p class="testimonial-card-tittle">
           Such a life-changing experience. Highly recommended!
-        </h2>
+        </p>
         <div class="testimonial-card-paragraph">
           <p>
             “ Before joining the bootcamp, I’ve never written a line of code. I
@@ -175,7 +175,7 @@
             recommend! ”
           </p>
         </div>
-      </article>
+      </figure>
     </main>
 
     <footer class="attribution">
