improved HTML semantic markup

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <p class="card-name-verified">Verified Graduate</p>
           </div>
         </figcaption>
-        <p class="testimonial-card-tittle">
-          I received a job offer mid-course, and the subjects I learned were
-          current, if not more so, in the company I joined. I honestly feel I
-          got every penny’s worth.
-        </p>
-        <div class="testimonial-card-paragraph">
-          <p>
+        <blockquote class="testimonial-card-blockquote">
+          <p class="testimonial-card-main-quote">
+            I received a job offer mid-course, and the subjects I learned were
+            current, if not more so, in the company I joined. I honestly feel I
+            got every penny’s worth.
+          </p>
+          <p class="testimonial-card-secondary-quote">
             “ I was an EMT for many years before I joined the bootcamp. I’ve
             been looking to make a transition and have heard some people who had
             an amazing experience here. I signed up for the free intro course
@@ -69,7 +69,7 @@
             completing the course, I’ve successfully switched careers, working
             as a Software Engineer at a VR startup. ”
           </p>
-        </div>
+        </blockquote>
       </figure>
       <figure class="testimonial-card">
         <figcaption class="testimonial-card-flex">
@@ -83,16 +83,16 @@
             <p class="card-name-verified">Verified Graduate</p>
           </div>
         </figcaption>
-        <p class="testimonial-card-tittle">
-          The team was very supportive and kept me motivated
-        </p>
-        <div class="testimonial-card-paragraph">
-          <p>
+        <blockquote class="testimonial-card-blockquote">
+          <p class="testimonial-card-main-quote">
+            The team was very supportive and kept me motivated
+          </p>
+          <p class="testimonial-card-secondary-quote">
             “ I started as a total newbie with virtually no coding skills. I now
             work as a mobile engineer for a big company. This was one of the
             best investments I’ve made in myself. ”
           </p>
-        </div>
+        </blockquote>
       </figure>
       <figure class="testimonial-card">
         <figcaption class="testimonial-card-flex">
@@ -106,15 +106,15 @@
             <p class="card-name-verified">Verified Graduate</p>
           </div>
         </figcaption>
-        <p class="testimonial-card-tittle">
-          An overall wonderful and rewarding experience
-        </p>
-        <div class="testimonial-card-paragraph">
-          <p>
+        <blockquote class="testimonial-card-blockquote">
+          <p class="testimonial-card-main-quote">
+            An overall wonderful and rewarding experience
+          </p>
+          <p class="testimonial-card-secondary-quote">
             “ Thank you for the wonderful experience! I now have a job I really
             enjoy, and make a good living while doing something I love. ”
           </p>
-        </div>
+        </blockquote>
       </figure>
       <figure class="testimonial-card">
         <figcaption class="testimonial-card-flex">
@@ -128,13 +128,13 @@
             <p class="card-name-verified">Verified Graduate</p>
           </div>
         </figcaption>
-        <p class="testimonial-card-tittle">
-          Awesome teaching support from TAs who did the bootcamp themselves.
-          Getting guidance from them and learning from their experiences was
-          easy.
-        </p>
-        <div class="testimonial-card-paragraph">
-          <p>
+        <blockquote class="testimonial-card-blockquote">
+          <p class="testimonial-card-main-quote">
+            Awesome teaching support from TAs who did the bootcamp themselves.
+            Getting guidance from them and learning from their experiences was
+            easy.
+          </p>
+          <p class="testimonial-card-secondary-quote">
             “ The staff seem genuinely concerned about my progress which I find
             really refreshing. The program gave me the confidence necessary to
             be able to go out in the world and present myself as a capable
@@ -142,7 +142,7 @@
             personal attention you need from an incredible community of smart
             and amazing people. ”
           </p>
-        </div>
+        </blockquote>
       </figure>
       <figure class="testimonial-card">
         <figcaption class="testimonial-card-flex">
@@ -156,11 +156,11 @@
             <p class="card-name-verified">Verified Graduate</p>
           </div>
         </figcaption>
-        <p class="testimonial-card-tittle">
-          Such a life-changing experience. Highly recommended!
-        </p>
-        <div class="testimonial-card-paragraph">
-          <p>
+        <blockquote class="testimonial-card-blockquote">
+          <p class="testimonial-card-main-quote">
+            Such a life-changing experience. Highly recommended!
+          </p>
+          <p class="testimonial-card-secondary-quote">
             “ Before joining the bootcamp, I’ve never written a line of code. I
             needed some structure from professionals who can help me learn
             programming step by step. I was encouraged to enroll by a former
@@ -174,7 +174,7 @@
             job as a full-stack developer after receiving multiple offers. 100%
             recommend! ”
           </p>
-        </div>
+        </blockquote>
       </figure>
     </main>
 
